[project]
name = "langgraph-runner"
version = "0.1.0"
description = "LangGraph Runner system for building and executing AI workflow graphs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.1.6",
    "langchain-community>=0.4.1",
    "langchain-unstructured>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "chromadb>=1.4.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.8",
    "structlog>=25.1.0",
    "unstructured[pdf]>=0.18.21",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19.1",
    "pre-commit (==4.5.1)",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_runner"]

[tool.uv]
resolution = "highest"

[tool.mypy]
python_version = "3.13"
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
strict_equality = true
extra_checks = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["chromadb.*", "unstructured.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
src = ["src/langgraph_runner"]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
]
target-version = "py313"
line-length = 88
indent-width = 4

[tool.ruff.lint]
ignore = [
    "E501",   # line too long - handled by formatter
    "E203",   # whitespace before ':' - conflicts with black
    "ERA001", # commented out code
    "RET504", # unnecessary assignment before return
]
extend-select = [
    "B",      # bugbear
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I001",   # isort
    "UP",     # pyupgrade
    "RUF100", # unused-noqa
    "T201",   # print statements
    "PIE",    # flake8-pie
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "RET",    # flake8-return
    "RSE",    # flake8-raise
    "ISC",    # flake8-implicit-str-concat
    "C4",     # flake8-comprehensions
    "PLE",    # pylint-errors
    "PLW",    # pylint-warnings
]

[tool.ruff.lint.isort]
known-first-party = ["langgraph_runner", "tests"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["T201"]
